@@ -8,4 +8,5 @@
 - remove hash/list buffering in list.c hash.c?
 - if speak_to_ip is non-multicast check if listener has 
   the speak_to_ip.
-- finish up listen_on_network_interface stuff
+- single heartbeat_network_interface configuration option?
+  - makes sense, probably should
